# polyvr-packaging

./: .gitignore  PolyVR.desktop  README.md  Start
mac_os/: Mac_Setup.sh
redhat/: .gitignore  PolyVR.sh  osg_dependencies  package_CEF  package_OPENSG  package_POLYVR  pvr_dependencies  setup_dependencies.sh
ubuntu/: .gitignore  compileOSGexamples  osg_dependencies  package_CEF  package_COLLADA  package_DWG  package_IFC  package_OCE  package_OPCUA  package_OPENSG  package_POLYVR  package_STEP  package_VIRT  package_VIVE  package_VRPN  package_all  pvr_dependencies  pvr_dependencies_min  setup_dependencies.sh  setup_min_pvr.sh  update_OpenSG.sh  update_pvr_dependencies.sh
ubuntu/collada-dom/dom/src/dae/: daeMetaGroup.cpp
ubuntu/libvive-dev/DEBIAN/: control
ubuntu/libvive-dev/usr/lib/Steam/: libacl.so.1.1.0  libattr.so.1.1.0  libbz2.so.1.0.4  libcap.so.2.22  libcom_err.so.2.1  libcrypto.so.1.0.0  libdbus-1.so.3.5.8  libexpat.so.1.5.2  libgcc_s.so.1  libgcrypt.so.11.7.0  libglib-2.0.so.0.3200.3  libgpg-error.so.0.8.0  libkeyutils.so.1.4  libncurses.so.5.9  libncursesw.so.5.9  libpci.so.3.1.8  libpcre.so.3.12.1  libpng12.so.0.46.0  libselinux.so.1  libssl.so.1.0.0  libtinfo.so.5.9  libudev.so.0.13.0  libusb-1.0.so.0.1.0  libuuid.so.1.3.0  libwrap.so.0.7.6  libz.so.1.2.3.4
ubuntu/virtuose/: virtuoseAPI.h
ubuntu/virtuose/win-32/Release/: virtuoseDLL.lib
ubuntu/virtuose/win-32/ReleaseMD/: virtuoseDLL.lib
ubuntu/virtuose/win-64/Release/: virtuoseDLL.lib
ubuntu/virtuose/win-64/ReleaseMD/: virtuoseDLL.lib
webassembly/: .gitignore  README  WebAssemblyTest.cbp  cleanup.sh  deployWasm.sh  setup.sh  setupOSG.sh  setupPVR.sh  setup_emsdk.sh  startTest.sh
webassembly/trials/glut/: glutTest.cpp  glutTest.html
webassembly/trials/osg/: compile  loadTest.html  osgTest.cpp  osgTest.html
webassembly/trials/pvr/: Terrain2.pvr  animations.pvr  buildingVis.pvr
webassembly/trials/pytest/: CMakeLists.txt  main.cpp  pyTest.html
webassembly/trials/sdl/: sdlTest.html
webassembly/trials/simple/: compile  scanDir.php  simple.cpp  simple.html
webassembly/trials/simple/data/: dat1  dat2
windows/: compile_cpython.bat  compile_gtk.bat  compile_libxml2.bat  get_vs_vars.sh  set_variables.sh  setup_boost.sh  setup_dependencies.sh  setup_gtk.sh  setup_opensg.sh  setup_pvr.sh
windows2/: setup.sh  utils.sh
